Cycles: slightly improve OpenCL performance by reordering SVM enum values

Ref T71479